--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,10 @@
 .App {
+  background-color: #282c34;
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
